Fix to collapse at correct width

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -1808,7 +1808,7 @@ html[class*="page-docs"] a[href*="example.com"] {
   }
 }
 
-@media screen and (max-width: 1152px) {
+@media screen and (max-width: 1151px) {
     .docs-menu .docs-menu-content  {
         top: calc(8rem);
         height: 74vh;
